fix:remove styles for invisible hover effect

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,24 +37,8 @@ a {
   position: relative;
 }
 
-a::after {
-  content: '';
-  background-color: var(--desert-dark);
-  width: 0;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  transform-origin: right;
-  transition: all 0.2s ease-in-out;
-  z-index: -1;
-}
-
 a:hover {
   color: var(--oasis-dark);
-}
-
-a:hover::after {
-  width: 100%;
 }
 
 #main_header > nav,
